[gd_scene load_steps=10 format=3 uid="uid://diyrwckyhjymg"]

[ext_resource type="Script" uid="uid://dswraaekfjdga" path="res://Scripts/player.gd" id="1_b43ah"]
[ext_resource type="Texture2D" uid="uid://cdnh330mnaik2" path="res://Sprites/MainCharacter2.png" id="2_shmu5"]
[ext_resource type="PackedScene" uid="uid://cwd2r02puc1vm" path="res://Prefabs/bomb.tscn" id="2_vxq8l"]
[ext_resource type="PackedScene" uid="uid://c1exf5l8gq8ej" path="res://Prefabs/hook_shoot.tscn" id="3_gg3t4"]
[ext_resource type="Script" uid="uid://cr3g4rtsvnjr7" path="res://Scripts/inputManager.gd" id="3_vxq8l"]
[ext_resource type="PackedScene" uid="uid://dtqylaw40i7ku" path="res://Components/health_controller.tscn" id="6_gg3t4"]
[ext_resource type="PackedScene" uid="uid://cbclpj3qgkfmt" path="res://Components/damage_controller.tscn" id="7_javds"]

[sub_resource type="SpriteFrames" id="SpriteFrames_kpjcp"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_shmu5")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xhfnw"]
size = Vector2(16, 15)

[node name="Player" type="RigidBody2D" node_paths=PackedStringArray("raycast")]
collision_mask = 3
gravity_scale = 0.0
lock_rotation = true
script = ExtResource("1_b43ah")
maxSpeed = 85.0
acceleration = 10.0
desaceleration = 10.0
minimumInputVector = 0.1
bombPrefab = ExtResource("2_vxq8l")
bombDamage = 5.0
bombRadius = 32.0
hookPrefab = ExtResource("3_gg3t4")
raycast = NodePath("RayCast2D")
bombOfsset = 25
hookOffset = 10

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_kpjcp")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 4.5)
shape = SubResource("RectangleShape2D_xhfnw")

[node name="InputManager" type="Node2D" parent="."]
script = ExtResource("3_vxq8l")
delta = 0.1

[node name="BombTimer" type="Timer" parent="."]
wait_time = 1.2
one_shot = true

[node name="RayCast2D" type="RayCast2D" parent="."]
enabled = false
target_position = Vector2(0, 15)
collision_mask = 2
collide_with_areas = true

[node name="HealthController" parent="." instance=ExtResource("6_gg3t4")]
maxHealth = 10.0

[node name="DamageController" parent="." instance=ExtResource("7_javds")]

[connection signal="OnBombInput" from="InputManager" to="." method="DropBomb"]
[connection signal="OnBowInput" from="InputManager" to="." method="ShootBow"]
[connection signal="OnHookInput" from="InputManager" to="." method="ShootHookshot"]
[connection signal="OnMoveSignal" from="InputManager" to="." method="OnMoveInputChange"]
[connection signal="OnShieldInput" from="InputManager" to="." method="RaiseShield"]
[connection signal="OnSwordInput" from="InputManager" to="." method="SwingSword"]
[connection signal="timeout" from="BombTimer" to="." method="BombTimeout"]
[connection signal="OnDeath" from="HealthController" to="." method="Destroy"]
[connection signal="OnDamage" from="DamageController" to="HealthController" method="TakeDamage"]
